2023-04-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/digest.c (digest): Support crc33c
	* man/digest.Rd: Document crc32c option, add two examples

	* src/crc32c.h: Adding new CRC32C implementation
	* src/crc32c.cpp: Idem
	* src/crc32c_portable.cpp: Idem; also added codecov nocov
	* src/crc32c/*: Idem

	* src/Makevars: Added for PKG_CPPFLAGS
	* src/Makevars.win: Idem

	* R/init.R: Added some codecov nocov

	* .codecov.yml (coverage): Added coverage diff settings

2023-02-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/Makevars: No longer require CXX_STD

2022-12-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.31

	* src/digest.c: Replace sprintf with snprintf

	* .editorconfig: Added
	* .Rbuildignore: Updated

2022-11-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.30

	* src/crc32.c: Modernize three function signatures to current C
	standards to appease clang-15 now used by CRAN

	* src/sha2.c (SHA512_End): Align two function signatures to their
	prototypes to appease gcc-12

2022-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* docs/mkdmt-src/src/index.md: Several small updates with upgrade to
	Material for MkDocs 8.5.5

2021-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.29

	* src/digest.c (digest): Accomodate Windows UCRT build
	* man/AES.Rd: Remove one URL that upsets the URL checker
	* README.md: Update one URL that upsets the URL checker

2021-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* vignettes/sha1.md: Renamed from .Rmd, corrected code block syntax

2021-11-19  Dirk Eddelbuettel  <edd@debian.org>
