@@ -19,14 +19,16 @@
 ##  along with digest.  If not, see <http://www.gnu.org/licenses/>.
 
 getVDigest <- function(algo = c("md5", "sha1", "crc32", "sha256", "sha512",
-                                 "xxhash32", "xxhash64", "murmur32", "spookyhash"),
+                                "xxhash32", "xxhash64", "murmur32", "spookyhash",
+                                "blake3", "crc32c"),
                         errormode=c("stop","warn","silent")){
     algo <- match.arg(algo, c("md5", "sha1", "crc32", "sha256", "sha512",
-                              "xxhash32", "xxhash64", "murmur32", "spookyhash"))
+                              "xxhash32", "xxhash64", "murmur32", "spookyhash",
+                              "blake3", "crc32c"))
     errormode <- match.arg(errormode, c("stop","warn","silent"))
     algoint <- algo_int(algo)
     non_streaming_algos <- c("md5", "sha1", "crc32", "sha256", "sha512",
-                             "xxhash32", "xxhash64", "murmur32")
+                             "xxhash32", "xxhash64", "murmur32", "blake3", "crc32c")
     if (algo %in% non_streaming_algos)
         return(non_streaming_digest(algo, errormode, algoint))
     streaming_digest(algo, errormode, algoint)
